frontend/tests/cases/positive/simple/simple3.gr
id : Int → Int
id x = x

main : Int
main = id 3 * id 4 + id 5
