frontend/tests/cases/negative/refutable.gr
foo : Int → Int
foo = λ2 → 4
